public/styles.css
/* Overview */

/* Related Items and Comparison */

/* Questions and Answers */
.questionsList div:nth-child(5n) {
  display: none;
}
.answersList div:nth-child(2n) {
  display: none;
}
/* Ratings and Reviews */
.reviews-list {
  display: flex;
  flex-direction: column;
  border: 1px solid gray;
}

.maximized {
  height: 100vh;
  overflow: scroll;
}

.review {
  position: relative;
  width: 50%;
  border-bottom: 1px solid gray;
}

.name-and-date {
  float: right;
}

.photo {
  display: inline;
  width: 100%;
  height: 100%;
  max-width: 20%;
  max-height: 50px;
  object-fit: scale-down;
}

.vote {
  color: blue;
}

.yes {
  color: green;
}

.no, .reported {
  color: red;
}

